# cargo-index-transit

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: check.yml  test.yml
src/: dotcrate.rs  index.rs  lib.rs  publish.rs
src/dotcrate/: deser.rs
tests/: proptest.rs  via-cargo.rs
tests/util/: mod.rs
