[package]
name = "cargo-index-transit"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A package for common types for Cargo index interactions, and conversion between them."
repository = "https://github.com/jonhoo/cargo-index-transit.git"

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive", "rc"] }

[dev-dependencies]
# for rust 1.x, cargo version is 0.(x+1)
cargo = "0.70"
crates-io = "0.35"
crates-index = "2.5"
tempfile = "3.3.0"
flate2 = "1.0.25"
tar = "0.4.38"
toml_edit = { version = "0.19", features = ["serde"] }
serde_json = "1"
proptest = "1.1.0"

# for -Zminimal-versions
openssl = "0.10.38"
crossbeam-channel = "0.3.9"
pkg-config = "0.3.16"
hkdf = "0.12.3"
p384 = "0.11.2"

[patch.crates-io]
# https://github.com/rust-lang/cargo/pull/11700
# Remove once `cargo` for Rust 1.69 is released (2023-04-20)
cargo = { git = "https://github.com/rust-lang/cargo.git", rev = "b008a8dccaf5e79b31c666f6313fb27d1ea874ff" }
